--- a/index.html
+++ b/index.html
@@ -108,6 +108,48 @@
             </div>
         </div>
     </div>
+    <footer>
+        <div class="content">
+            <h3>Fiber</h3>
+            <div class="content-list">
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eius, totam!<br><br>Made with love in the Netherlands.</p>
+            </div>
+        </div>
+        <div class="content">
+            <h3>Sitemap</h3>
+            <div class="content-list">
+                <p><a href="#">Homepage</a></p>
+                <p><a href="#">Pricing</a></p>
+                <p><a href="#">Testimonials</a></p>
+                <p><a href="#">Features</a></p>
+            </div>
+        </div>
+        <div class="content">
+            <h3>Resources</h3>
+            <div class="content-list">
+                <p><a href="#">Support</a></p>
+                <p><a href="#">Contact</a></p>
+                <p><a href="#">FAQ</a></p>
+            </div>
+        </div>
+        <div class="content">
+            <h3>Company</h3>
+            <div class="content-list">
+                <p><a href="#">About</a></p>
+                <p><a href="#">Customers</a></p>
+                <p><a href="#">Blogs</a></p>
+            </div>
+        </div>
+        <div class="content">
+            <h3>Portfolios</h3>
+            <div class="content-list">
+                <p><a href="#">Sarah Andrews</a></p>
+                <p><a href="#">Mathew Higgins</a></p>
+                <p><a href="#">Janice Dave</a></p>
+            </div>
+        </div>
+    </footer>
+
     <!-- Javascript -->
     <script src="js/script.js"></script>
 </body>
