--- a/index.html
+++ b/index.html
@@ -7,13 +7,22 @@
     <title>Fiber Landing Page</title>
 </head>
 <body>
-    <nav>
+    <nav id="navbar">
         <div class="container">
             <a class="title" href="#">Fiber</a>
             <div class="menu-icon">
                 <div class="line-1 no-animation"></div>
                 <div class="line-2 no-animation"></div>
                 <div class="line-3 no-animation"></div>
+            </div>
+            <div class="center-item">
+                <a href="#" class="item">Community</a>
+                <a href="#" class="item">Pricing</a>
+                <a href="#" class="item">Features</a>
+            </div>
+            <div class="right-item">
+                <a href="#" class="item secondary-btn">Sign In</a>
+                <a href="#" class="item primary-btn">Sign Up</a>
             </div>
         </div>
     </nav>
@@ -23,10 +32,22 @@
             <img src="Assets/hero-Illustration.png" alt="">
         </div>
         <div class="container-content">
+            <div class="rating">
+                <div class="star-list">
+                    <img src="Assets/star.svg" alt="star rating">
+                    <img src="Assets/star.svg" alt="star rating">
+                    <img src="Assets/star.svg" alt="star rating">
+                    <img src="Assets/star.svg" alt="star rating">
+                    <img src="Assets/star.svg" alt="star rating">
+                </div>
+                <span>Rated 4.8/5 (243 Reviews)</span>
+            </div>
             <h2>Create your portfolio in minutes.</h2>
             <p>With Fiber, you can setup your own portfolio in minutes with dozens of premade, beautiful templates.</p>
-            <button class="cta-button">Start Free Trial</button>
-            <span class="example-link"><a href="#">View Example</a></span>
+            <div class="button-list">
+                <button class="cta-button">Start Free Trial</button>
+                <span class="example-link"><a href="#">View Example</a></span>
+            </div>
             <ul class="promo-list">
                 <li><img src="Assets/Checkmark.svg"/>No Credit Card Required</li>
                 <li><img src="Assets/Checkmark.svg"/>10 Free Templates</li>
@@ -57,9 +78,11 @@
     </div>
 
     <div class="section-3">
-        <h2 class="white-text">Diversity your portfolio.</h2>
-        <p>Create an even more impressive portfolio by creating case studies for your projects. Simply follow our step-by-step guide.</p>
-        <button class="cta-button">Start Free Trial</button>
+        <div class="container-content">
+            <h2 class="white-text">Diversity your portfolio.</h2>
+            <p>Create an even more impressive portfolio by creating case studies for your projects. Simply follow our step-by-step guide.</p>
+            <button class="cta-button">Start Free Trial</button>
+        </div>
         <div class="section-image">
             <img src="Assets/Page Image.png" alt="page image">
         </div>
@@ -82,29 +105,29 @@
             </div>
             <div class="content">
                 <div class="top-profile">
-                    <img class="profile-image" src="Assets/User Avatar.svg" alt="user 1">
+                    <img class="profile-image" src="Assets/User Avatar 2.svg" alt="user 1">
                     <div class="profile-data">
-                        <h3 class="name purple-text">Sarah Andrews</h3>
-                        <span class="revenue">$100k in revenue</span>
+                        <h3 class="name purple-text">Matthew Higgins</h3>
+                        <span class="revenue">$30k in revenue</span>
                     </div>
                 </div>
                 <p class="comment">
                     Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolores quae voluptatum magnam eligendi vel eos iste iure doloremque deleniti possimus provident.
                 </p>
-                <button class="cta-button">View Sarah's Portfolio</button>
+                <button class="cta-button">View Matthew's Portfolio</button>
             </div>
             <div class="content">
                 <div class="top-profile">
-                    <img class="profile-image" src="Assets/User Avatar.svg" alt="user 1">
+                    <img class="profile-image" src="Assets/User Avatar 32.svg" alt="user 1">
                     <div class="profile-data">
-                        <h3 class="name purple-text">Sarah Andrews</h3>
-                        <span class="revenue">$100k in revenue</span>
+                        <h3 class="name purple-text">Janice Dave</h3>
+                        <span class="revenue">$20k in revenue</span>
                     </div>
                 </div>
                 <p class="comment">
                     Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolores quae voluptatum magnam eligendi vel eos iste iure doloremque deleniti possimus provident.
                 </p>
-                <button class="cta-button">View Sarah's Portfolio</button>
+                <button class="cta-button">View Janice's Portfolio</button>
             </div>
         </div>
     </div>
@@ -112,7 +135,7 @@
         <div class="content">
             <h3>Fiber</h3>
             <div class="content-list">
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eius, totam!<br><br>Made with love in the Netherlands.</p>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eius, totam!<br><br>Made with ♥ in the Netherlands.</p>
             </div>
         </div>
         <div class="content">
