add sign up page

--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
             <div class="center-item">
                 <a href="#" class="item">Community</a>
                 <a href="#" class="item">Pricing</a>
-                <a href="#" class="item">Features</a>
+                <a href="#feature" class="item">Features</a>
             </div>
             <div class="right-item">
                 <a href="#" class="item secondary-btn">Sign In</a>
-                <a href="#" class="item primary-btn">Sign Up</a>
+                <a href="/sign-up.html" class="item primary-btn">Sign Up</a>
             </div>
         </div>
     </nav>
@@ -55,7 +55,7 @@
         </div>
     </div>
 
-    <div class="section-2">
+    <div id="feature" class="section-2">
         <h3 class="purple-text">Why Fiber?</h3>
         <h2>A good portfolio means good employability.</h2>
         <div class="container-content">
