--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             </div>
             <div class="right-item">
                 <a href="#" class="item secondary-btn">Sign In</a>
-                <a href="/sign-up.html" class="item primary-btn">Sign Up</a>
+                <a href="./sign-up.html" class="item primary-btn">Sign Up</a>
             </div>
         </div>
     </nav>
