--- a/sign-up.html
+++ b/sign-up.html
@@ -10,7 +10,7 @@
     <div class="main-container">
         <div class="main-content">
             <div class="container">
-                <a href="/index.html" class="logo">Fiber</a>
+                <a href="./index.html" class="logo">Fiber</a>
                 <h2>Create your Fiber account</h2>
                 <form action="#" class="sign-up-form">
                     <div class="input-item">
